--- a/package.json
+++ b/package.json
@@ -8,8 +8,14 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^6.2.0",
+    "@fortawesome/free-solid-svg-icons": "^6.2.0",
+    "@fortawesome/vue-fontawesome": "^2.0.8",
     "core-js": "^3.8.3",
-    "vue": "^2.6.14"
+    "swiper": "^8.3.2",
+    "swiper-slides": "^0.0.1",
+    "vue": "^2.6.14",
+    "vue-image-slider": "^1.0.2"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
